--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ input[type="number"]:focus {
 }
 
 .btn-calc {
-    margin-top: 10px;
+    margin-top: 20px;
     background-color: #007FFF;
     padding: 10px 20px !important;
     border-radius: 5px;
@@ -199,5 +199,105 @@ a {
         margin-top: 5%;
         font-size: 0.8em;
         margin-bottom: 5%;
+    }
+}
+
+@property --x {
+    syntax: '<angle>';
+    inherits: true;
+    initial-value: 1deg;
+}
+
+@property --c {
+    syntax: '<color>';
+    inherits: true;
+    initial-value: #0000;
+}
+  
+.neon {
+    float: left;
+    margin-top: 5px;
+    cursor: pointer;
+    --x: 1deg;
+    --c: #0000;
+    --color: #007FFF;
+    font-size: 2rem;
+    appearance: none;
+    position: relative;
+    aspect-ratio: 2;
+    border-radius: 100em;
+    overflow: hidden;
+    background:  linear-gradient(to bottom right, #0001, #0000),#444143;
+    width: 3em;
+    box-shadow: inset 0 0 0.25em -0.25em #0008, inset 0.05em 0.05em 0.2em #000811, inset -0.05em -0.05em 0.15em 0.05em #ccc1, 0 0 0 0.11em #545153;
+    transition: --x 0.5s, --c 0.5s, box-shadow 0.5s;
+    filter: drop-shadow(0 0 0.2em var(--c));
+    
+    &::before {
+      content: "";
+      position: absolute;
+      height: 80%;
+      aspect-ratio: 1;
+      top: 50%;
+      left: 25%;
+      transform: translate(-50%, -50%);
+      background: radial-gradient(#0000  15%, #343133 16%, #545153 20%), repeating-linear-gradient(#0000 0 10%, #0002 0 20%) 50% 50% / 25% 25% no-repeat, repeating-linear-gradient(90deg, #0000 0 10%, #0002 0 20%) 50% 50% / 25% 25% no-repeat, radial-gradient(var(--c) 17%, #0000 0),#545153;
+      box-shadow: inset -0.05em -0.05em 0.1em #0008, inset 0.05em 0.05em 0.1em #ffffff22, inset 0.05em 0em 0.1em -0.065em var(--c), 0.1em 0.1em 0.15em #000c;
+      border-radius: 50%;
+      transition: left 0.5s, box-shadow 0.1s;
+    }
+    
+    &::after {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: calc(100% + 0.25em);
+      height: calc(100% + 0.25em);
+      border: 0.1em solid var(--color);
+      border-radius: 100em;
+      -webkit-mask: conic-gradient(from calc(270deg - var(--x)), #000 calc(2 * var(--x)), #0001 0);
+      box-shadow: 0 0 0 2em #0000;
+    }
+    
+    &:hover {
+      --x: 3deg;
+      --c: #007FFF;
+      --c: rgb(from var(--color) r g b / 25%);
+      box-shadow: inset 0 0 0.25em -0.25em #0008, inset 0.05em 0.05em 0.2em #000811, inset -0.05em -0.05em 0.15em 0.05em #ccc1, 0 0 0.05em 0.075em #545153;
+    }
+    
+    &:checked {
+      --x: 180deg;
+      --c: var(--color);
+      box-shadow: inset 0 0 0.25em -0.25em #0008, inset 0.05em 0.05em 0.2em #000811, inset -0.05em -0.05em 0.15em 0.05em #ccc1, 0 0 0.1em 0.05em #545153;
+      
+      &::before {
+        left: 75%;
+        box-shadow: inset -0.05em -0.05em 0.1em #0008, inset 0.05em 0.05em 0.1em #ffffff22, inset -0.05em 0em 0.1em -0.035em var(--c), 0.1em 0.1em 0.15em #000c;
+      }
+    }
+    
+    &[disabled] {
+      opacity: 0.25;
+    }
+}
+  
+@media print {
+    .neon {
+      background: none;
+      
+      &, &::before, &::after {
+        -webkit-print-color-adjust: exact;
+        print-color-adjust: exact;
+      }
+    }
+}
+  
+@media (prefers-reduced-motion) {
+    .neon, .neon::before, .neon::after {
+        transition: none !important;
+        animation: none !important;
     }
 }
