--- a/css/style.css
+++ b/css/style.css
@@ -40,17 +40,18 @@ body {
 .calc-cost {
     margin: 1% 0% 0% 1% !important;
     display: flex;
-    align-items: center;
+    justify-content: space-around;
+    align-items: stretch;
 }
 
 .calc-wholesale {
     margin: 1% 0% 0% 1% !important;
-    align-items: center;
+    justify-content: space-around;
+    align-items: stretch;
     display: none;
 }
 
 .inputs, .outputs {
-    margin: auto;
     background-color: #363636;
     border-radius: 5px;
     padding: 20px;
@@ -84,6 +85,7 @@ body {
 .select-body {
     display: none;
     position: fixed;
+    margin-top: -15px;
     background-color: #222222;
     z-index: 1;
     border: 1px solid #5a5a5a;
