--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 .tabs-wrapper {
-    margin-top: 3% !important;
+    margin-top: 1%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -104,7 +104,7 @@ body {
 }
 
 .text-field__input {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     background-color: #222222;
     display: block;
     padding: 0.375rem 0.75rem;
@@ -147,12 +147,12 @@ input[type="number"]:focus {
 }
 
 .btn-clearance {
-    margin-top: 20px !important;
-    padding: 20px 40px;
-    background-color: #007FFF;
+    font-size: 16px;
+    padding: 10px 20px;
+    background-color: #41bda8;
     border-radius: 5px;
     font-weight: 600;
-    float: left;
+    float: right;
 }
 
 a {
@@ -162,7 +162,7 @@ a {
 
 .btn-clearance:hover {
     cursor: pointer;
-    box-shadow: 0px 0px 10px -2px #007FFF;
+    box-shadow: 0px 0px 10px -2px #41bda8;
 }
 
 .left-info {
@@ -171,7 +171,7 @@ a {
     padding-bottom: 5px;
     color: rgb(211, 211, 211);
     border-bottom: 2px solid #007FFF;
-    margin-bottom: 30px;
+    margin-bottom: 25px;
 }
 
 .right-info {
@@ -181,7 +181,7 @@ a {
     text-align: right;
     color: rgb(211, 211, 211);
     border-bottom: 2px solid #007FFF;
-    margin-bottom: 30px;
+    margin-bottom: 25px;
 }
 
 @media screen and (max-width: 1350px) {
