--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,11 @@ input[type="number"]:focus {
     box-shadow: 0px 0px 10px -2px #007FFF;
 }
 
+.btn-calc-CC-all-price {
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
 .inputs {
     display: block !important;
 }
