--- a/css/style.css
+++ b/css/style.css
@@ -131,9 +131,11 @@ input[type="number"]:focus {
 .btn-calc {
     margin-top: 20px;
     background-color: #007FFF;
-    padding: 10px 20px !important;
+    padding: 10px 10px !important;
+    font-size: 16px;
     border-radius: 5px;
     font-weight: 600;
+    text-align: center;
     float: left;
 }
 
@@ -142,13 +144,14 @@ input[type="number"]:focus {
     box-shadow: 0px 0px 10px -2px #007FFF;
 }
 
-.btn-calc-CC-all-price {
-    margin-top: 10px;
-    margin-bottom: 20px;
-}
-
 .inputs {
     display: block !important;
+}
+
+.inputs-item-flex {
+    width: 45%;
+    display: inline-block;
+    margin: 0% 2%;
 }
 
 .btn-clearance {
@@ -189,7 +192,7 @@ a {
     margin-bottom: 25px;
 }
 
-@media screen and (max-width: 950) {
+@media screen and (max-width: 950px) {
     .calc-cost {
         display: block;
     }
@@ -207,6 +210,7 @@ a {
         font-size: 0.8em;
         margin-bottom: 5%;
     }
+
 }
 
 @property --x {
@@ -222,7 +226,6 @@ a {
 }
   
 .neon {
-    float: left;
     margin-top: 5px;
     cursor: pointer;
     --x: 1deg;
