--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,8 @@ a {
 @media screen and (max-width: 950px) {
     .inputs, .outputs {
         width: 100%;
+        padding: 10px 10px;
+        white-space: nowrap;
     }
     
     .calc-cost {
