--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,13 @@ body {
     display: none;
 }
 
+.calc-america {
+    margin-top: 1%;
+    justify-content: space-around;
+    align-items: stretch;
+    display: none;
+}
+
 .inputs, .outputs {
     width: 45%;
     background-color: #363636;
@@ -153,7 +160,15 @@ input[type="number"]:focus {
 .inputs-item-flex {
     width: 45%;
     display: inline-block;
-    margin: 0% 2%;
+    /* margin: 0% 2%; */
+}
+
+.inputs-item-flex:first-child {
+    margin-right: 4%;
+}
+
+.inputs-item-flex:last-child {
+    margin-left: 4%;
 }
 
 .btn-clearance {
@@ -318,4 +333,101 @@ a {
         transition: none !important;
         animation: none !important;
     }
+}
+
+.select-body-State-America {
+    height: 300px;
+    overflow-y: scroll;
+}
+
+.seacrch-wrapper {
+    margin-bottom: 10px;
+}
+
+.text-field__input_state {
+    display: block;
+    width: 100%;
+    height: calc(2.25rem + 2px);
+    padding: 0.375rem 0.75rem;
+    font-family: inherit;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: white;
+    background-color: #5a5a5a;
+    background-clip: padding-box;
+    border: 1px solid #bdbdbd;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
+.text-field__input_state::placeholder {
+    color: white;
+    opacity: 0.4;
+}
+
+.text-field__input_state:focus {
+    color: white;
+    background-color: #5a5a5a;
+    border-color: #bdbdbd;
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(158, 158, 158, 0.25);
+}
+
+.text-field__input_state:disabled,
+.text-field__input_state[readonly] {
+    background-color: #f5f5f5;
+    opacity: 1;
+}
+
+.text-field__icon_search::before {
+    width: 1rem;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23bdbdbd' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.text-field__icon-2 {
+    position: relative;
+}
+
+.text-field__icon-2::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 2.5rem;
+    background-color: #5a5a5a;
+    color: white;
+    border: 1px solid #bdbdbd;
+    border-top-left-radius: 0.25rem;
+    border-bottom-left-radius: 0.25rem;
+}
+
+.text-field__icon-2::after {
+    content: '';
+    color: white;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    top: 0;
+    bottom: 0;
+    width: 2.5rem;
+    top: 50%;
+    transform: translateY(-50%);
+    justify-content: center;
+}
+
+.text-field__icon-2 input {
+    padding-left: 3rem;
+}
+
+.text-field__icon-2_search::after {
+    width: 2.5rem;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='white' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: center;
 }
