--- a/css/style.css
+++ b/css/style.css
@@ -41,21 +41,26 @@ body {
     margin-top: 1%;
     display: flex;
     justify-content: space-around;
-    align-items: stretch;
+    align-items: center;
+    margin-bottom: 20px;
 }
 
 .calc-wholesale {
     margin-top: 1%;
     justify-content: space-around;
-    align-items: stretch;
+    /* align-items: stretch; */
+    align-items: center;
     display: none;
+    margin-bottom: 20px;
 }
 
 .calc-america {
     margin-top: 1%;
     justify-content: space-around;
-    align-items: stretch;
+    /* align-items: stretch; */
+    align-items: center;
     display: none;
+    margin-bottom: 20px;
 }
 
 .inputs, .outputs {
@@ -214,6 +219,13 @@ a {
 }
 
 @media screen and (max-width: 950px) {
+    .d_flex {
+        display: block !important;
+    }
+    .link-fix {
+        margin-top: 10px;
+    }
+
     .inputs, .outputs {
         width: 100%;
         padding: 10px 10px;
@@ -438,4 +450,83 @@ a {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='white' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E");
     background-repeat: no-repeat;
     background-position: center;
+}
+
+
+
+
+
+
+
+.d_flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.currencyExchange-wrapper {
+    position: relative;
+    background-color: #1a191e;
+    padding: 5px;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.currencyExchange-wrapper .currency-item {
+    display: flex;
+    justify-content: space-between;
+    background-color: #363636;
+    border-radius: 5px;
+    padding: 5px 10px;
+    margin: 10px 0px;
+}
+
+.currencyExchange-wrapper .currency-item label {
+    font-size: 16px;
+    margin-bottom: -5px;
+}
+
+.currencyExchange-wrapper .currency-item .select-header, .currencyExchange-wrapper .currency-item input {
+    width: 100px !important;
+    margin-bottom: 5px !important;
+    height: 42px !important;
+}
+
+.currencyExchange-wrapper .currency-item .select-body {
+    position: absolute;
+    margin-top: -5px !important;
+}
+
+.currencyExchange-wrapper .info-btn-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 20px 0px;
+}
+
+.currencyExchange-wrapper .info-btn-wrapper .btn-exchange-currency {
+    background-color: #007FFF;
+    padding: 10px 10px !important;
+    white-space: nowrap;
+    font-size: 0.9em;
+    border-radius: 5px;
+    font-weight: 600;
+    text-align: center;
+    float: left;
+}
+
+.currencyExchange-wrapper .info-btn-wrapper .btn-exchange-currency:hover {
+    cursor: pointer;
+    box-shadow: 0px 0px 10px -2px #007FFF;
+}
+
+
+.currencyExchange-wrapper .currency-item input, .currencyExchange-wrapper .currency-item .select-header {
+    border: none;
+    border-bottom: 1px solid #5a5a5a;
+    background-color: #363636;
+}
+
+.currencyExchange-wrapper .currency-item input {
+    padding-left: 5px;
 }
