--- a/css/style.css
+++ b/css/style.css
@@ -472,7 +472,7 @@ a {
     overflow: hidden;
 }
 
-.currencyExchange-wrapper .currency-item {
+.currencyExchange-wrapper .currency-item, .currencyExchange-wrapper .currency-cross {
     display: flex;
     justify-content: space-between;
     background-color: #363636;
@@ -485,12 +485,12 @@ a {
     margin-top: 0px;
 }
 
-.currencyExchange-wrapper .currency-item label {
+.currencyExchange-wrapper .currency-item label, .currencyExchange-wrapper .currency-cross label {
     font-size: 16px;
     margin-bottom: -5px;
 }
 
-.currencyExchange-wrapper .currency-item .select-header, .currencyExchange-wrapper .currency-item input {
+.currencyExchange-wrapper .currency-item .select-header, .currencyExchange-wrapper .currency-item input, .currencyExchange-wrapper .currency-cross input {
     width: 100px !important;
     margin-bottom: 5px !important;
     height: 30px !important;
@@ -508,35 +508,18 @@ a {
     margin: 20px 0px;
 }
 
-.currencyExchange-wrapper .info-btn-wrapper .btn-exchange-currency {
-    background-color: #007FFF;
-    padding: 10px 10px !important;
-    white-space: nowrap;
-    font-size: 0.9em;
-    border-radius: 5px;
-    font-weight: 600;
-    text-align: center;
-    float: left;
-}
-
-.currencyExchange-wrapper .info-btn-wrapper .btn-exchange-currency:hover {
-    cursor: pointer;
-    box-shadow: 0px 0px 10px -2px #007FFF;
-}
-
-
 .currencyExchange-wrapper .info-btn-wrapper .info-label {
     width: 100%;
     text-align: center !important;
 }
 
-.currencyExchange-wrapper .currency-item input, .currencyExchange-wrapper .currency-item .select-header {
+.currencyExchange-wrapper .currency-item input, .currencyExchange-wrapper .currency-cross input, .currencyExchange-wrapper .currency-item .select-header {
     border: none;
     border-bottom: 1px solid #5a5a5a;
     background-color: #363636;
 }
 
-.currencyExchange-wrapper .currency-item input {
+.currencyExchange-wrapper .currency-item input, .currencyExchange-wrapper .currency-cross input {
     padding-left: 5px;
 }
 
