--- a/css/style.css
+++ b/css/style.css
@@ -239,6 +239,11 @@ a {
     margin-bottom: 25px;
 }
 
+.li-payment, .ri-payment {
+    font-size: 16px;
+    font-style: italic;
+}
+
 @media screen and (max-width: 950px) {
     .d_flex {
         display: block !important;
