--- a/css/style.css
+++ b/css/style.css
@@ -242,6 +242,7 @@ a {
 .li-payment, .ri-payment {
     font-size: 16px;
     font-style: italic;
+    border-bottom: none;
 }
 
 @media screen and (max-width: 950px) {
