--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,11 @@ body {
     right: 20px;
     bottom: 20px;
     cursor: pointer;
+    transition: transform 0.5s ease-in-out;
+}
+
+.settings-svg:hover {
+    transform: rotate(180deg);
 }
 
 .settings-svg path {
